# agent-chain

./: .gitignore  PLAN.md  README.md  pyproject.toml
examples/: transcript.json
src/agent_chain/: canonical.py  chain.py  cli.py  signing.py  step.py
src/work_chain/: chain.py  cli.py  signing.py  step.py
