[project]
name = "work-chain"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0",
  "click>=8.1",
]

[project.scripts]
work-chain = "work_chain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/work_chain"]
