[project]
name = "agent-chain"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0",
  "click>=8.1",
]

[project.scripts]
agent-chain = "agent_chain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_chain"]
